crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__sorting__select_order_by_album_artist_name.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Fanfare for the Common Man"
      },
      {
        "Name": "OAM's Blues"
      },
      {
        "Name": "\"Eine Kleine Nachtmusik\" Serenade In G, K. 525: I. Allegro"
      },
      {
        "Name": "Requiem, Op.48: 4. Pie Jesu"
      },
      {
        "Name": "Fantasia On Greensleeves"
      }
    ]
  }
]
