crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__sorting__select_order_by_artist_album_count.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
