crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__sorting__select_order_by_artist_name.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others"
      },
      {
        "Name": "The World of Classical Favourites"
      },
      {
        "Name": "Bach: Orchestral Suites Nos. 1 - 4"
      },
      {
        "Name": "Balls to the Wall"
      },
      {
        "Name": "Restless and Wild"
      }
    ]
  }
]
