crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__sorting__select_order_by_artist_name_with_name.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "A Copland Celebration, Vol. I",
        "public.Artist": {
          "rows": [
            {
              "Name": "Aaron Copland & London Symphony Orchestra"
            }
          ]
        }
      },
      {
        "Name": "Worlds",
        "public.Artist": {
          "rows": [
            {
              "Name": "Aaron Goldberg"
            }
          ]
        }
      },
      {
        "Name": "Sir Neville Marriner: A Celebration",
        "public.Artist": {
          "rows": [
            {
              "Name": "Academy of St. Martin in the Fields Chamber Ensemble & Sir Neville Marriner"
            }
          ]
        }
      },
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others",
        "public.Artist": {
          "rows": [
            {
              "Name": "Academy of St. Martin in the Fields, John Birch, Sir Neville Marriner & Sylvia McNair"
            }
          ]
        }
      },
      {
        "Name": "The World of Classical Favourites",
        "public.Artist": {
          "rows": [
            {
              "Name": "Academy of St. Martin in the Fields & Sir Neville Marriner"
            }
          ]
        }
      }
    ]
  }
]
