crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__sorting__sorting_by_relationship_count_with_predicate.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Metallica"
      },
      {
        "Name": "U2"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
